--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -4,10 +4,12 @@ metadata:
   name: xeropark-api
   namespace: xeropark-api
 spec:
-  type: NodePort
+  selector:
+    app: xeropark-api
   ports:
   - protocol: TCP
     post: 80
     targetPort: 6789
+  type: NodePort
   selector:
     app: xeropark-api
