--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -10,6 +10,7 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 6789
+    nodePort: 6789
   type: NodePort
   selector:
     app: xeropark-api
