k8sとdocker-compose.ymlを変更

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   api:
-    image: python:3.11.10-bookworm
+    image: xeropark-api:latest
     container_name: xeropark-api
     build:
       context: .
